# ArDali

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  check_tauri.js  index.html  package-lock.json  package.json
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: main.yml
dali-lang/: README.md  package-lock.json  package.json
dali-lang/editors/kate/: dali.xml
dali-lang/editors/vscode/: package.json
dali-lang/examples/: web-bass-enhancer.dali.wasm.generated.js  web-bass-enhancer.dl.wasm.generated.js  web-eq32-reference.dl.wasm.generated.js  web-smart-task-reference.dl.wasm.generated.js
dali-lang/scripts/: dali-security-suite.js
dali-lang/src/: cli.js  compiler-web-audio.js  parser.js
dali-visualizer/: Cargo.toml  build.rs  patch.sh
dali-visualizer/src/: main.rs  projectm.rs
dli/: CMakeLists.txt
dli/analyzers/: analyzerbase.cpp  analyzerbase.h  analyzercontainer.cpp  analyzercontainer.h  baranalyzer.cpp  baranalyzer.h  blockanalyzer.cpp  blockanalyzer.h  boomanalyzer.cpp  boomanalyzer.h  engine_fwd.h  enginebase.cpp  enginebase.h  fht.cpp  fht.h  sonogram.cpp  sonogram.h  turbine.cpp  turbine.h
public/ardali-store/: catalog.json
public/ardali-store/extensions/youtube-focus/: main.js
public/downloader/: downloader-tauri-api.js  downloaderRenderer.js  index.html
public/downloader/styles/: downloader.css
public/eq-presets/: index.json
public/eq-presets/ardali/: eq_presets.json
public/locales/: ar-SA.json  en-US.json  es-ES.json  tr-TR.json
public/visualizer-presets/: index.json
scripts/: build-dali-web-engine.mjs  build-dli-analyzers.mjs  build-eq-preset-index.mjs  build-visualizer.mjs  clean.mjs
src/: AboutWindow.tsx  App.tsx  TabBar.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/native/: ardali_dsp.cpp
src-tauri/src/: downloader.rs  lib.rs  main.rs  native_audio.rs  plugin_commands.rs  webview_manager.rs
src-tauri/src/security/: keygen.rs  mod.rs  validator.rs
src/web/: SearchAutocomplete.tsx  pluginManager.ts  webManager.ts  webSettings.ts
visualizer/: CMakeLists.txt  README.md  gl_loader.cpp  gl_loader.h  main_imgui.cpp  projectm_c_api_compat.h
