[package]
name = "dali-visualizer"
version = "0.1.0"
edition = "2024"

[dependencies]
egui = "0.27"
egui-winit = "0.27"
egui_glow = "0.27"
winit = "0.29"
glutin = "0.31"
glutin-winit = "0.4"
glow = "0.13"
libc = "0.2"
raw-window-handle = "0.5"
eframe = "0.27"
image = { version = "0.25.10", features = ["png"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
